code/zz_decl_register_file.c.error
zz_decl_register_file.c:12:14: error: illegal storage class on file-scoped variable
   12 | register int g;
      |              ^
1 error generated.
